fix to overflow on medium and small displays

--- a/_sboleynP2/css/style.css
+++ b/_sboleynP2/css/style.css
@@ -28,8 +28,6 @@ button:hover{
     border-color:  rgb(66, 0, 128);
 }
 
-
-
 .w3-button.w3-black{
     margin-right: 10px;
 }
@@ -174,6 +172,24 @@ p{
     padding: 15px;
 }
 
+button:visited{
+    border-style: solid;
+    border-color:  rgb(0, 77, 128);
+    border-width: 2px;
+}
+button{
+    background-color: rgba(66, 0, 128, 0.3);
+    border: solid;
+    border-color:  rgba(66, 0, 128, 0.3);
+    border-width: 2px;
+}
+
+button:hover{
+    background-color: rgba(66, 0, 128, 0.7);
+    border-style: dashed;
+    border-color:  rgb(66, 0, 128);
+}
+
 .w3-button.w3-black{
     margin-right: 10px;
 }
@@ -193,7 +209,7 @@ p{
 
 .containerItem{
     position: relative;
-    /* overflow: hidden; */
+    overflow: hidden;
     max-height: 100%;
   }
 
@@ -252,6 +268,24 @@ p{
     .buttonRow{
         padding: 15px;
     }
+
+    button:visited{
+        border-style: solid;
+        border-color:  rgb(0, 77, 128);
+        border-width: 2px;
+    }
+    button{
+        background-color: rgba(66, 0, 128, 0.3);
+        border: solid;
+        border-color:  rgba(66, 0, 128, 0.3);
+        border-width: 2px;
+    }
+    
+    button:hover{
+        background-color: rgba(66, 0, 128, 0.7);
+        border-style: dashed;
+        border-color:  rgb(66, 0, 128);
+    }
     
     .w3-button.w3-black{
         margin-right: 10px;
@@ -270,11 +304,11 @@ p{
         font-family: 'Lato', sans-serif;
     }
     
-    /* .containerItem{
+    .containerItem{
         position: relative;
         overflow: hidden;
         max-height: 100%;
-      } */
+      }
     
     section{
         height: 100%;
